/*
 * This file was generated by the Gradle 'init' task.
 */

plugins {
    id 'java'
    id 'application'
    id "org.openjfx.javafxplugin" version "0.0.9"
}

group = 'addicks.tobias'
version = '1.1'
description = 'AntolinReader'
ext.moduleName = 'AntolinReader.main'
java.sourceCompatibility = JavaVersion.VERSION_14


repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.openjfx:javafx-graphics:15-ea+6'
    implementation 'org.openjfx:javafx-controls:15-ea+6'
    implementation 'org.openjfx:javafx-fxml:15-ea+6'
// https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml
    implementation group: 'org.apache.poi', name: 'poi-ooxml', version: '5.0.0'
    implementation 'org.slf4j:slf4j-api:1.7.30'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.6.0'
}

def currentOS = org.gradle.internal.os.OperatingSystem.current()
def platform
if (currentOS.isWindows()) {
    platform = 'win'
} else if (currentOS.isLinux()) {
    platform = 'linux'
} else if (currentOS.isMacOsX()) {
    platform = 'mac'
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

javafx {
    version = '14'
    modules = [ 'javafx.controls', 'javafx.fxml' ]
    configuration = 'implementation'
}

mainClassName = 'main.Main'

jar {
    inputs.property("moduleName", moduleName)
    manifest {
        attributes('Automatic-Module-Name': moduleName)
    }
}

compileJava {
    inputs.property("moduleName", moduleName)
    doFirst {
        options.compilerArgs = [
                '--module-path', classpath.asPath,
                '--add-modules', 'javafx.controls',
                '--add-modules', 'javafx.fxml',
                '--add-modules', 'javafx.graphics',
        ]
        classpath = files()
    }
}

run {
    doFirst {
        jvmArgs = [
                '--module-path', classpath.asPath,
                '--add-modules', 'javafx.controls',
                '--add-modules', 'javafx.fxml',
                '--add-modules', 'javafx.graphics',
        ]
    }
}
